
2007-05-27  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Use quotes and indentation more consistently,
	change the texts a bit, and put the link to the latest POT file
	in a more logical place.

	* web/layout.html: Condense the page a little.

	* doc/Makefile, web/Makefile: Improve the dependencies.

2007-05-26  Benno Schulenberg  <benno@vertaalt.nl>

	* README: Show how Apache is to be configured.

2007-05-26  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, lib/config.py, lib/localweb.py,
	web/Makefile, web/layout.html: Put the static HTML files in
	documentroot, and the redirecting files in a pass/ subdir.

2007-05-26  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/files.all, doc/software.all: Textual tweaks.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/Makefile, doc/index.html, doc/thanks.html, doc/whydisclaim.html:
	Don't forget to transform the predefined HTML pages.

	* Get it right at the second try.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/data.py, lib/localweb.py, lib/registry.py,
	lib/sgml.py, bin/make-maintain, bin/po-expire, bin/po-matrix,
	bin/po-register, bin/po-tidy-links, bin/postats-data, bin/tp-robot:
	Make names of data directories easily configurable, plus some
	whitespace corrections.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot, README: First framework for a README file that
	should explain how the Translation Project hangs together: how
	the server is configured, what procedures the administrators
	follow.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/Makefile, web/Makefile: Improvements.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/postats-data: Order options, fix a path, whitespace tweaks.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, web/Makefile, web/registry.cgi.in:
	Clean it up a bit.

2007-05-24  Benno Schulenberg  <benno@vertaalt.nl>
