@@ -15,6 +15,7 @@ host = string.split(socket.gethostname(), '.')[0]
 if host in ('neoduik',): # The machine of Vrijschrift
     progs_path = "/home/benno/progs"
     site_path = "/home/benno/site"
+    cache_path = "/home/benno/cache"
     pots_dir = "POT-files"
     pos_dir = "PO-files"
     last_dir = "latest-POs"
@@ -35,7 +36,4 @@ environ = {
     'margin_color': 'white',
     'caption_color': 'cyan',
     'html_layout_file': '%s/web/layout.html' % progs_path,
-    'cgi_base': cgi_base,
-    'pass_base': pass_base,
-    'site_base': site_base,
     }
